# verity-db

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PLAN.md  README.md  bacon.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/craton/: Cargo.toml
crates/craton-admin/: Cargo.toml
crates/craton-admin/src/: main.rs
crates/craton-agent-protocol/: Cargo.toml
crates/craton-agent-protocol/src/: lib.rs
crates/craton-client/: Cargo.toml
crates/craton-client/src/: client.rs  error.rs  lib.rs
crates/craton-crypto/: Cargo.toml
crates/craton-crypto/src/: anonymize.rs  chain.rs  encryption.rs  error.rs  field.rs  hash.rs  lib.rs  signature.rs
crates/craton-directory/: Cargo.toml
crates/craton-directory/src/: lib.rs  tests.rs
crates/craton-kernel/: Cargo.toml
crates/craton-kernel/src/: command.rs  effects.rs  kernel.rs  lib.rs  state.rs  tests.rs
crates/craton-mcp/: Cargo.toml
crates/craton-mcp/src/: audit.rs  error.rs  handler.rs  lib.rs  server.rs  tests.rs  tool.rs
crates/craton-query/: Cargo.toml
crates/craton-query/src/: error.rs  executor.rs  key_encoder.rs  lib.rs  parser.rs  plan.rs  planner.rs  schema.rs  tests.rs  value.rs
crates/craton-server/: Cargo.toml
crates/craton-server/src/: auth.rs  config.rs  connection.rs  error.rs  handler.rs  lib.rs  metrics.rs  replication.rs  server.rs  tests.rs
crates/craton-sharing/: Cargo.toml
crates/craton-sharing/src/: consent.rs  error.rs  lib.rs  scope.rs  tests.rs  token.rs  transform.rs
crates/craton-sim/: Cargo.toml
crates/craton-sim/src/: clock.rs  error.rs  event.rs  fault.rs  invariant.rs  lib.rs  rng.rs
crates/craton-storage/: Cargo.toml
crates/craton-storage/proptest-regressions/: tests.txt
crates/craton-storage/src/: checkpoint.rs  error.rs  index.rs  lib.rs  record.rs  storage.rs  tests.rs
crates/craton-store/: Cargo.toml
crates/craton-store/src/: batch.rs  btree.rs  cache.rs  error.rs  lib.rs  node.rs  page.rs  store.rs  superblock.rs  tests.rs  version.rs
crates/craton-types/: Cargo.toml
crates/craton-types/src/: lib.rs  tests.rs
crates/craton-vsr/: Cargo.toml
crates/craton-vsr/src/: checkpoint.rs  config.rs  event_loop.rs  idempotency.rs  lib.rs  message.rs  multi_node.rs  simulation.rs  single_node.rs  superblock.rs  tcp_transport.rs  tests.rs  types.rs
crates/craton-vsr/src/replica/: mod.rs  normal.rs  recovery.rs  repair.rs  state.rs  state_transfer.rs  view_change.rs
crates/craton-wire/: Cargo.toml
crates/craton-wire/src/: error.rs  frame.rs  lib.rs  message.rs  tests.rs
crates/craton/src/: craton.rs  error.rs  lib.rs  tenant.rs
crates/vdb-crypto/: Cargo.toml
crates/vdb-crypto/src/: anonymize.rs  chain.rs  encryption.rs  error.rs  field.rs  lib.rs  signature.rs
crates/vdb-directory/: Cargo.toml
crates/vdb-directory/src/: lib.rs  tests.rs
crates/vdb-kernel/: Cargo.toml
crates/vdb-kernel/src/: command.rs  kernel.rs  lib.rs  state.rs  tests.rs
crates/vdb-projections/: Cargo.toml
crates/vdb-projections/src/: error.rs  event.rs  lib.rs
crates/vdb-projections/src/events/: change.rs  mod.rs  values.rs
crates/vdb-projections/src/realtime/: hook.rs  mod.rs  subscribe.rs
crates/vdb-query/: Cargo.toml
crates/vdb-query/src/: error.rs  executor.rs  key_encoder.rs  lib.rs  plan.rs  planner.rs  schema.rs  tests.rs  value.rs
crates/vdb-runtime/: Cargo.toml
crates/vdb-runtime/src/: error.rs  handle.rs  lib.rs  runtime.rs
crates/vdb-server/: Cargo.toml
crates/vdb-server/src/: auth.rs  config.rs  connection.rs  error.rs  handler.rs  health.rs  lib.rs  metrics.rs  replication.rs  server.rs  tests.rs  tls.rs
crates/vdb-sharing/: Cargo.toml
crates/vdb-sharing/src/: consent.rs  lib.rs  scope.rs  tests.rs  token.rs  transform.rs
crates/vdb-sim/: Cargo.toml
crates/vdb-sim/src/: clock.rs  event.rs  fault.rs  invariant.rs  lib.rs  network.rs  rng.rs  storage.rs
crates/vdb-storage/: Cargo.toml
crates/vdb-storage/src/: checkpoint.rs  error.rs  index.rs  lib.rs  record.rs  storage.rs  tests.rs
crates/vdb-store/: Cargo.toml
crates/vdb-store/src/: batch.rs  btree.rs  cache.rs  error.rs  lib.rs  node.rs  page.rs  store.rs  superblock.rs  tests.rs  types.rs  version.rs
website/: Cargo.toml  Dockerfile  package.json  sst.config.ts
website/.config/: bacon.toml
website/content/blog/: 001-introducing-veritydb.md  002-why-im-building-veritydb.md  003-veritaserum-our-coding-philosophy.md
website/crates/craton-site/: Cargo.toml  build.rs
website/crates/craton-site/src/: content.rs  lib.rs  main.rs  router.rs  state.rs
website/crates/craton-site/src/handlers/: architecture.rs  blog.rs  home.rs  mod.rs
website/crates/craton-site/src/templates/: mod.rs
website/crates/vdb-site/: Cargo.toml  build.rs
website/crates/vdb-site/src/: content.rs  dev_tools.rs  lib.rs  main.rs  router.rs
website/crates/vdb-site/src/handlers/: blog.rs  home.rs  mod.rs
website/crates/vdb-site/src/templates/: mod.rs
website/public/css/: style.css  style.min.css
website/public/css/blocks/: architecture.css  audit-timeline.css  blog.css  button.css  card.css  comparison-slider.css  hash-chain.css  hero.css  interactive-section.css  interactive.css  lab-clock.css  log-state.css  nav.css  one-invariant.css  performance.css  scroll-journey.css  simulation.css  sql-pipeline.css  tenant-vault.css  terminal.css  time-travel.css  write-path.css
website/public/css/compositions/: center.css  cluster.css  flow.css  grid.css  repel.css  sidebar.css  switcher.css  wrapper.css
website/public/css/global/: animations.css  fonts.css  form-controls.css  global-styles.css  reset.css  variables.css
website/public/css/utilities/: color.css  spacing.css  text.css  visually-hidden.css
website/public/js/: theme-toggle.js
website/templates/: architecture.html  base.html  home.html
website/templates/_partials/: footer.html  header.html
website/templates/blog/: index.html  post.html
website/templates/partials/figures/: comparison-slider.html  simulation-clock.html  sql-pipeline.html  time-travel.html
(+51 files in other folders)
