[workspace]
resolver = "2"
members = [
    "crates/vdb",
    "crates/vdb-types",
    "crates/vdb-crypto",
    "crates/vdb-storage",
    "crates/vdb-kernel",
    "crates/vdb-directory",
]
default-members = ["crates/vdb"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/veritydb/veritydb"
homepage = "https://github.com/veritydb/veritydb"
documentation = "https://docs.rs/vdb"
keywords = ["database", "compliance", "audit", "healthcare", "event-sourcing"]
categories = ["database", "data-structures"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow patterns that are reasonable during early development
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"

# Cryptography
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
chacha20poly1305 = { version = "0.11.0-rc.2", features = ["rand_core"] }
rand = "0.8"
getrandom = "0.3.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
subtle = "2.6.1"
aes-gcm = "0.11.0-rc.2"
sha2 = "0.11.0-rc.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Checksums
crc32fast = "1"

# Testing
proptest = "1"
test-case = "3"
tempfile = "3"

# Internal crates
vdb = { path = "crates/vdb" }
vdb-types = { path = "crates/vdb-types" }
vdb-crypto = { path = "crates/vdb-crypto" }
vdb-storage = { path = "crates/vdb-storage" }
vdb-kernel = { path = "crates/vdb-kernel" }
vdb-directory = { path = "crates/vdb-directory" }
