[workspace]
resolver = "2"
members = [
    "crates/craton",
    "crates/craton-types",
    "crates/craton-crypto",
    "crates/craton-storage",
    "crates/craton-kernel",
    "crates/craton-directory",
    "crates/craton-agent-protocol",
    "crates/craton-sim",
    "crates/craton-vsr",
    "crates/craton-store",
    "crates/craton-query",
    "crates/craton-wire",
    "crates/craton-server",
    "crates/craton-client",
    "crates/craton-admin",
    "crates/craton-sharing",
    "crates/craton-mcp",
]
default-members = ["crates/craton"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/craton-db/craton"
homepage = "https://github.com/craton-db/craton"
documentation = "https://docs.rs/craton"
keywords = ["database", "compliance", "audit", "healthcare", "event-sourcing"]
categories = ["database", "data-structures"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow patterns that are reasonable during early development
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"

# Cryptography
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
chacha20poly1305 = { version = "0.11.0-rc.2", features = ["rand_core"] }
rand = "0.8"
getrandom = "0.3.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
subtle = "2.6.1"
aes-gcm = "0.11.0-rc.2"
sha2 = "0.11.0-rc.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Checksums
crc32fast = "1"

# Testing
proptest = "1"
test-case = "3"
tempfile = "3"

# Benchmarking & Profiling
criterion = { version = "0.8", features = ["html_reports"] }
hdrhistogram = "7"

# SQL parsing
sqlparser = "0.54"

# Parallelism
rayon = "1.10"
crossbeam-queue = "0.3"

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"

# Authentication
jsonwebtoken = "9"

# Metrics & Observability
prometheus = { version = "0.13", default-features = false }

# Signal handling
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }

# Internal crates
craton = { path = "crates/craton" }
craton-types = { path = "crates/craton-types" }
craton-crypto = { path = "crates/craton-crypto" }
craton-storage = { path = "crates/craton-storage" }
craton-kernel = { path = "crates/craton-kernel" }
craton-directory = { path = "crates/craton-directory" }
craton-agent-protocol = { path = "crates/craton-agent-protocol" }
craton-sim = { path = "crates/craton-sim" }
craton-vsr = { path = "crates/craton-vsr" }
craton-store = { path = "crates/craton-store" }
craton-query = { path = "crates/craton-query" }
craton-wire = { path = "crates/craton-wire" }
craton-server = { path = "crates/craton-server" }
craton-client = { path = "crates/craton-client" }
craton-sharing = { path = "crates/craton-sharing" }
craton-mcp = { path = "crates/craton-mcp" }
