[package]
name = "craton-client"
description = "Craton RPC client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
craton-types.workspace = true
craton-wire.workspace = true

# Core
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
