[package]
name = "craton-crypto"
description = "Cryptographic primitives for Craton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
