[package]
name = "craton-directory"
description = "Placement routing for Craton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
craton-types.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
