[package]
name = "craton-mcp"
description = "Craton MCP server for LLM and third-party integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
craton.workspace = true
craton-types.workspace = true
craton-crypto.workspace = true
craton-sharing.workspace = true
craton-query.workspace = true

# Core
bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64.workspace = true

# Time
chrono.workspace = true

# Random for request IDs
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
