[package]
name = "craton-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL query layer for Craton projections"

[lints]
workspace = true

[dependencies]
# Core
bytes.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# SQL parsing
sqlparser.workspace = true

# Internal
craton-types.workspace = true
craton-store.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
