[package]
name = "craton-storage"
description = "Append-only segment storage for Craton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
craton-types.workspace = true
craton-crypto.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
crc32fast.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
tempfile.workspace = true
