[package]
name = "craton-types"
description = "Core type definitions for Craton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true
getrandom.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
