[package]
name = "craton-vsr"
description = "Viewstamped Replication consensus for Craton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
craton-types.workspace = true
craton-crypto.workspace = true
craton-storage.workspace = true
craton-kernel.workspace = true

# Core
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
getrandom.workspace = true

# Checksums
crc32fast.workspace = true

# Multi-node networking
mio.workspace = true
bincode.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
test-case.workspace = true
craton-sim.workspace = true
rand = { version = "0.8", features = ["small_rng"] }
