[package]
name = "craton-wire"
description = "Binary wire protocol for Craton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
craton-types.workspace = true

# Serialization
serde.workspace = true
bincode = "1.3"

# Checksums
crc32fast.workspace = true

# Core
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
