[package]
name = "craton"
description = "Craton - Compliance-native database for regulated industries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates (foundation layer)
craton-types.workspace = true
craton-crypto.workspace = true
craton-storage.workspace = true
craton-kernel.workspace = true
craton-directory.workspace = true

# Internal crates (data layer)
craton-store.workspace = true
craton-query.workspace = true

# Core
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
