[package]
name = "vdb-crypto"
description = "Cryptographic primitives for VerityDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
