[package]
name = "vdb-kernel"
description = "Pure functional state machine for VerityDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
vdb-types.workspace = true
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
