[package]
name = "vdb-projections"
version.workspace = true
edition.workspace = true

[dependencies]
vdb-types.workspace = true
sqlx = { workspace = true, features = ["sqlite-preupdate-hook"] }
libsqlite3-sys.workspace = true                                   # Links SQLCipher
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
time.workspace = true
serde.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
