[package]
name = "vdb-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
vdb-types.workspace = true
vdb-kernel.workspace = true
vdb-vsr.workspace = true
vdb-storage.workspace = true
vdb-directory.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
