[package]
name = "vdb-server"
description = "VerityDB server daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
vdb.workspace = true
vdb-types.workspace = true
vdb-wire.workspace = true
vdb-query.workspace = true

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# Core
base64.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
vdb-client.workspace = true
