[package]
name = "vdb-server"
description = "VerityDB server daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
vdb.workspace = true
vdb-types.workspace = true
vdb-wire.workspace = true
vdb-query.workspace = true
vdb-vsr.workspace = true
vdb-kernel.workspace = true

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS
rustls.workspace = true
rustls-pemfile.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Metrics
prometheus.workspace = true

# Signal handling
signal-hook.workspace = true
signal-hook-mio.workspace = true

# Core
base64.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
vdb-client.workspace = true
